--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,49 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+# ============================================
+# NODE / ANGULAR / NESTJS GITIGNORE
+# ============================================
+
+# --- Node ---
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
+
+# --- Build ---
+dist/
+dist-ssr/
+out/
+build/
+tmp/
+temp/
+.cache/
+.cache-loader/
+
+# --- Angular ---
+.angular/
+.angular-cache/
+.angular/*
+
+# Angular build output
+browser/
+server/
+
+# Environment files (never commit secrets)
+src/environments/environment.prod.ts
+src/environments/environment.ts
+src/environments/environment.*.ts
+
+# --- IDE / Editors ---
+# VSCode
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+
